# meta-environment

./: README.md  index.html  params.json
asc-support/: .cvsignore  .gitignore  AUTHORS  COPYING  ChangeLog  LICENSE  Makefile.am  Makefile.in  NEWS  README  asc-support.pc.in  asc-support.pkg  configure  configure.ac  configure.in  install-data-sh  make_rules  package  reconf  rewriter.tif.c  rewriter.tif.h
asc-support/lib/: .cvsignore  Library.c  Library.def  Library.h  Library_bottom.c  Library_dict.c  Library_dict.h  Makefile.am  asc-ambiguity.c  asc-ambiguity.h  asc-apply-me.h  asc-apply.c  asc-client.c  asc-client.h  asc-main.c  asc-muasf2pt.c  asc-muasf2pt.h  asc-nametable.c  asc-options.c  asc-options.h  asc-parsetable.c  asc-prod2str.c  asc-prod2str.h  asc-support-me.h  asc-support.c  asc-support2-me.h  asc-termstore.c  asc-termstore.h  asc-tide.c  asc-traversals.c  builtin-annos.c  builtin-common.c  builtin-common.h  builtin-fileio.c  builtin-implode.c  builtin-io.c  builtin-lifting.c  builtin-shell.c  builtin-term-compare.c  builtin-tide.c  (+8 more)
asc-support/lib-old/: .cvsignore  Makefile.am  _asc-support.h  asc-apply.c  asc-support.c  asc-support.h  asc-support2.h  rewriter.c  rewriter.tb
asc-support/libME/: Makefile.am  asc-apply-me.c  asc-apply.c  asc-support-me.c  asc-support-me.h  asc-support.c  asc-support2-me.h  asc-traversals.c  asc-traversals.h  main.c  muasf2pt.c  nametable.c  prod2str.c  rewriter-me.c  rewriter.c  rewriter.tb
asc-support/utils/: .cvsignore  Makefile.am  asc-support-config.src  gen-forward.sh  gen-link-test.sh  gen-protos.sh
asdf/: .gitignore  AUTHORS  ChangeLog  Makefile.am  TODO  asdf.pkg  changes  configure.in  hooks
asdf/asdf-pt/: .cvsignore  Makefile.am  dump-termstore.sh.src  dump_term  eval_action  evaluation  evaluation.sh.src  gen_asdf_pt  gen_asdf_pt.sh.src  gen_asf  gen_asf.sh.src  gen_sdf  gen_sdf.sh.src  get_imports  get_imports.sh.src  get_module_name  get_module_name.sh.src  get_signatures  get_signatures.sh.src  make_rules  typecheck.sh.src
asdf/initialtermstore/: Makefile.am
asdf/meta-scripts/: .cvsignore  Makefile.am  asdf-modules.tb  asdf-modules.tb.src  error-display.tb  meta-interface.tb.src  meta.tb  meta.tb.src  standard.asdf.buttons.src  start-meta-termstore-dumper.tb  start-meta-termstore-dumper.tb.src
asdf/src/: .cvsignore  Makefile.am  action.sh.src
asf/: .cvsignore  .gitignore  ChangeLog  Makefile.am  NEWS  README  asf.pc.in  asf.pkg  configure.ac  configure.in  make_rules  package  reconf
asf-library/: .cvsignore  .gitignore  ADDING-TOOLS  AUTHORS  ChangeLog  Makefile.am  README  REDESIGN  STYLE-GUIDE  TODO  VERSION.in  asf-library.pc.in  asf-library.pkg  configure.ac  configure.in  configure.in.src  genconf.sh  make_rules  package  package.conf  reconf
asf-library/ac-macros/: acincludejava.m4
asf-library/lib/: .cvsignore
asf-library/src/: .cvsignore  Makefile.am  asf-builtins.c  asf-builtins.c.gen  asf-builtins.h.gen  asf-forward.c.gen  builtins.c.gen  builtins.h.gen  builtins.lst  link-test.c  objects.lst
asf-library/templates/: Makefile.am  make_rules  make_rules.asf  make_rules.lib  make_rules.sdf
asf-library/utils/: Makefile.am
asf/semantics/: Makefile.am
asf/syntax/: Makefile.am
asfsdf-meta/: .cvsignore  .gitignore  AUTHORS  ChangeLog  Makefile.am  README  asfsdf-meta.pc.in  asfsdf-meta.pkg  configure.ac  configure.in  package  reconf
asfsdf-meta/demo/: Makefile.am
asfsdf-meta/meta-scripts/: .cvsignore  Makefile.am  asf-editor-actions.tb  asf-editor-utils.tb  asf-initialize.tb  asf-language.tb  asf-listeners.tb  asf-utils.tb  asfsdfapigen.tb  eqs-dump.sh.src  error-display.tb  graph-arbiter.tb  meta-interface.tb.src  meta.sh.src  standard.asfsdf.buttons.src  start-meta-studio.tb.src
asfsdf-meta/src/: .cvsignore  (+10 more)
atermpp/: .cvsignore  .gitignore  AUTHORS  ChangeLog  Makefile.am  configure.ac  package  program-check.m4
autocode/: .cvsignore  .gitignore  ChangeLog  Makefile.am  brainstorm.txt  configure.in  literature.txt  todo.txt
c-library/: .cvsignore  .gitignore  AUTHORS  ChangeLog  Makefile.am  c-library.pc.in  configure.ac  package  reconf
config-manager/: .cvsignore  .gitignore  ChangeLog  Makefile.am  config-manager.pc.in  configure.ac  make_rules  package
config-support/: .classpath  .cvsignore  .gitignore  .project  ChangeLog  Makefile.am  config-support.pc.in  configure.ac  package
config-support-java/: .gitignore  ChangeLog  INSTALL  Makefile.am  config-support-java.pc.in  configure.ac
coolswing-gui/: .classpath  .project  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  coolswing-gui.pc.in  doc-header.html  install-sh  meta-build.ant  meta-build.m4  missing  swixml-gui-uninstalled.pc  swixml-gui.idef  swixml-gui.idef.src  swixml-gui.pc
dialog-gui/: .classpath  .cvsignore  .gitignore  .project  ChangeLog  Makefile.am  configure.ac  dialog-gui.pc.in  dialog.idef.src  package
diff-gui/: ChangeLog  Makefile.am  configure.ac  diff-gui.idef.src  package  program-check.m4  toolbus_make_rules
editor-plugin/: .classpath  .cvsignore  .gitignore  .project  ChangeLog  Makefile.am  configure.ac  editor-plugin.idef  editor-plugin.idef.src  editor-plugin.pc.in  package
error-gui/: .classpath  .cvsignore  .gitignore  .project  ChangeLog  Makefile.am  aclocal.m4  configure.ac  error-gui.pc.in  error-viewer.idef.src  package
error-support/: .classpath  .cvsignore  .gitignore  .project  AUTHORS  ChangeLog  Makefile.am  README  TODO  configure.ac  configure.in  error-support.pc.in  error-support.pkg  meta-errors.pkg  package
graph-gui/: .classpath  .cvsignore  .gitignore  .project  ChangeLog  Makefile.am  configure.ac  graph-gui.pc.in  graph-painter.idef.src  package
graph-support/: .classpath  .cvsignore  .gitignore  .project  AUTHORS  ChangeLog  Makefile.am  README  configure.ac  configure.in  graph-support.pc.in  graph-support.pkg  make_rules  package
graph-support-java/: .gitignore  ChangeLog  Makefile.am  graph-support-java.pc.in
io-support-java/: .gitignore  ChangeLog  Makefile.am  io-support-java.pc.in
(+15398 files in other folders)
