dnl $Id$

AC_INIT
AC_CONFIG_SRCDIR([configure.in])
AM_INIT_AUTOMAKE(asdf,0.1)
AC_PREREQ(2.59)

dnl What commands are needed to set the variable MAKE in Makefiles?
AC_PROG_MAKE_SET([])

dnl {{{  Which compiler to use?
AC_PROG_CC

AC_PACKAGE_REQUIRE(aterm, baffle,
   [  --with-aterm=DIR        ATerm-library is in DIR])
AC_SUBST(ATERM)

AC_PACKAGE_REQUIRE(error-support, error-support-config,
   [  --with-error-support=DIR        Error-support is in DIR])
AC_SUBST(ERROR_SUPPORT)

AC_PACKAGE_REQUIRE(toolbuslib, toolbuslib-config,
   [  --with-toolbuslib=DIR   ToolBus library is in DIR])
AC_SUBST(TOOLBUSLIB)

AC_PACKAGE_REQUIRE(toolbus, toolbus,
   [  --with-toolbus=DIR      ToolBus is in DIR])
AC_SUBST(TOOLBUS)

AC_PACKAGE_REQUIRE(pt-support, unparsePT,
   [  --with-pt-support=DIR   pt-support is in DIR])
AC_SUBST(PT_SUPPORT)

AC_PACKAGE_REQUIRE(sdf-support, sdf-support-config,
   [  --with-sdf-support=DIR  sdf-support is in DIR])
AC_SUBST(SDF_SUPPORT)

AC_PACKAGE_REQUIRE(asf-support, asf-support-config,
   [  --with-asf-support=DIR  asf-support is in DIR])
AC_SUBST(ASF_SUPPORT)

AC_PACKAGE_REQUIRE(asc-support, asc-support-config,
   [  --with-asc-support=DIR  asc-support is in DIR])
AC_SUBST(ASC_SUPPORT)

ASCINC=${ASC_SUPPORT}/include
AC_SUBST(ASCINC)
ASCLIB=${ASC_SUPPORT}/lib
AC_SUBST(ASCLIB)

AC_PACKAGE_REQUIRE(sglr, sglr,
   [  --with-sglr=DIR  sglr is in DIR])
AC_SUBST(SGLR)

AC_PACKAGE_REQUIRE(meta, generic-meta,
   [  --with-meta=DIR          Meta-Environment is in DIR])
AC_SUBST(META)

AC_PACKAGE_REQUIRE(asf, asfc,
   [  --with-asf=DIR           Asf is in DIR])
AC_SUBST(ASF)

AC_PACKAGE_REQUIRE(pgen, sdf2table,
   [  --with-pgen=DIR         pgen is in DIR])
AC_SUBST(PGEN)

AC_PACKAGE_REQUIRE(asf-library, asf-library-config,
   [  --with-asf=DIR           Asf+Sdf library is in DIR])
AC_SUBST(ASF_LIBRARY)

dnl Which files need updating?
AC_CONFIG_FILES([Makefile
  meta-scripts/Makefile
  src/Makefile
  asdf-pt/Makefile
  asdf-pt/asdf/Makefile
  asdf-pt/src/Makefile
])
AC_OUTPUT
