dnl $Id$

dnl Process this file with autoconf to produce a configure script.
AC_INIT(configure.in)
AM_INIT_AUTOMAKE(asf-library, 1.0)

ACLOCAL="${ACLOCAL} -I ."
AC_SET_MAKE

AC_OUTPUT(
   Makefile
   utils/Makefile
   library/Makefile
   library/basic/Makefile
   library/containers/Makefile
   library/utilities/Makefile
   library/languages/Makefile
   library/languages/cpp/Makefile
   library/languages/cpp/syntax/Makefile
   library/languages/asfix/Makefile
   library/languages/asfix/syntax/Makefile
   library/languages/asf/Makefile
   library/languages/asf/syntax/Makefile
   library/languages/aterm/Makefile
   library/languages/aterm/syntax/Makefile
   library/languages/sdf2/Makefile
   library/languages/sdf2/syntax/Makefile
   library/languages/sdf2/normalization/Makefile
   library/languages/sdf2/projection/Makefile
   library/languages/sdf2/renaming/Makefile
   library/languages/pico/Makefile
   library/languages/pico/syntax/Makefile
   library/languages/c/Makefile
   library/languages/c/syntax/Makefile
)
