dnl $Id$

dnl Process this file with autoconf to produce a configure script.
AC_INIT(configure.in)
AM_INIT_AUTOMAKE(asf, 1.0)

ACLOCAL="${ACLOCAL} -I ."

dnl Which compiler to use?
AC_REQUIRE([AC_PROG_CC])
AC_PROG_CC

dnl Handle --with-cflags option
AC_ARG_WITH(cflags,
   [  --with-cflags=CFLAGS    standard options of c compiler],
   CFLAGS=${withval},
   if test "a${GCC}" = "ayes"; then
     CFLAGS="-Wall -g -O2"
   fi;
)
AC_SUBST(CFLAGS)

dnl Handle --with-traversals
AC_ARG_WITH(traversals,
   [  --with-traversals       evaluator implements traveral functions],
   TRAVERSALSDEF=-DTRAVERSALS
)
AC_SUBST(TRAVERSALSDEF)

dnl Check for required packages and perform version check when needed.

dnl Require ATerm library
AC_PACKAGE_REQUIRE(aterm, baffle,
   [  --with-aterm=DIR        ATerm-library is in DIR])
AC_SUBST(ATERM)

dnl Require ToolBus
AC_PACKAGE_REQUIRE(toolbus, toolbus,
   [  --with-toolbus=DIR      ToolBus is in DIR])
AC_SUBST(TOOLBUS)

dnl Require pt-support package
AC_PACKAGE_REQUIRE(pt-support, unparsePT,
   [  --with-pt-support=DIR   pt-support is in DIR])
AC_SUBST(PT_SUPPORT)

dnl Require sdf-support package
AC_PACKAGE_REQUIRE(sdf-support, sdf-support-config,
   [  --with-sdf-support=DIR  sdf-support is in DIR])
AC_SUBST(SDF_SUPPORT)

dnl Require asf-support package
AC_PACKAGE_REQUIRE(asf-support, asf-support-config,
   [  --with-asf-support=DIR  asf-support is in DIR])
AC_SUBST(ASF_SUPPORT)

dnl Require asc-support package
AC_PACKAGE_REQUIRE(asc-support, asc-support-config,
   [  --with-asc-support=DIR  asc-support is in DIR])
AC_SUBST(ASC_SUPPORT)

ASCINC=${ASC_SUPPORT}/include
ASCLIB=${ASC_SUPPORT}/lib
AC_SUBST(ASCINC)
AC_SUBST(ASCLIB)

dnl Handle --with-tide=... argument to configure
AC_ARG_WITH(tide,
   [  --with-tide             TIDE is in DIR],
   TIDE=${withval}
   TIDEDEF="-DUSE_TIDE"
   TIDEINC="-I${TIDE}/include"
   TIDELIB="-L${TIDE}/lib -ltide-adapter",
)
AC_SUBST(TIDE)
AC_SUBST(TIDEDEF)
AC_SUBST(TIDEINC)
AC_SUBST(TIDELIB)

dnl Where is perl5?
AC_PATH_PROGS(PERL,perl5 perl, /usr/bin/perl)

dnl Our own version of libdir whose value is set dynamically
AC_SUBST(INSTLIBDIR)
INSTLIBDIR="$libdir"

dnl Is ranlib needed on this system?
AC_PROG_RANLIB
AC_PATH_PROG(AR,ar,/usr/bin/ar)



dnl What commands are needed to set the variable MAKE in Makefiles?
AC_SET_MAKE

dnl Determine which libraries to use for programs using sockets
NOSOCKLIBS=$LIBS
dnl first, the socket functions
SOCKET_FOUND=no
SOCKLIBS=
AC_CHECK_LIB(sun,socket,[SOCKET_FOUND=yes;SOCKLIBS="-lsun"])
if test ${SOCKET_FOUND} = no; then
  AC_CHECK_LIB(socket, socket,[SOCKET_FOUND=yes;SOCKLIBS="-lsocket"])
  if test ${SOCKET_FOUND} = no; then
    AC_CHECK_LIB(bsd,socket,[SOCKET_FOUND=yes;SOCKLIBS="-lbsd";DEFS="$DEFS -D_BSD=43"])
  fi
fi

dnl then gethostname
GHN_FOUND=no
AC_CHECK_LIB(sun,gethostname,[GHN_FOUND=yes])
if test ${GHN_FOUND} = no; then
  AC_CHECK_LIB(nsl,gethostname,[GHN_FOUND=yes;SOCKLIBS="$SOCKLIBS -lnsl"])
fi

AC_SUBST(SOCKLIBS)

LIBS=$NOSOCKLIBS

AC_CHECK_LIB(dl, dlopen)

dnl Checks for header files.
AC_CHECK_HEADER(getopt.h)

dnl Which files need updating?
AC_OUTPUT(
   Makefile
   addeqssyntax/Makefile
   addeqssyntax/spec/Makefile
   addeqssyntax/src/Makefile
   removevarsyntax/Makefile
   removevarsyntax/spec/Makefile
   removevarsyntax/src/Makefile
   asfc/Makefile
   asfc/src/Makefile
   asfc/src/muasf/Makefile
   asfc/c-source/Makefile
   asfc/test/Makefile
   asfc/test/terms/Makefile
   asfe/Makefile
   asfe/src/Makefile
   asfe/test/Makefile
   asfe/test/eqs/Makefile
   asfe/test/fail/Makefile
   asfe/test/ref/Makefile
   asfe/test/terms/Makefile
   test/Makefile
   utils/Makefile
)
