dnl $Id$

dnl Process this file with autoconf to produce a configure script.
AC_INIT(configure.in)
AM_INIT_AUTOMAKE(asf, 1.5beta)

ACLOCAL="${ACLOCAL} -I ."
AC_SET_MAKE

dnl {{{  Which compiler to use?
AC_REQUIRE([AC_PROG_CC])
AC_PROG_CC

dnl }}}
dnl {{{  Handle --with-cflags option

AC_ARG_WITH(cflags,
   [  --with-cflags=CFLAGS    standard options of c compiler],
   CFLAGS=${withval},
   if test "a${GCC}" = "ayes"; then
     CFLAGS="-Wall -g -O2"
   fi;
)
AC_SUBST(CFLAGS)

dnl }}}
dnl {{{  Handle --with-tide

AC_ARG_WITH(tide,
   [  --with-tide             TIDE is in DIR],
   TIDE=${withval}
   TIDEDEF="-DUSE_TIDE"
   TIDEINC="-I${TIDE}/include"
   TIDELIB="-L${TIDE}/lib -ltide-adapter",
)
AC_SUBST(TIDE)
AC_SUBST(TIDEDEF)
AC_SUBST(TIDEINC)
AC_SUBST(TIDELIB)

dnl }}}
dnl {{{  Require ATerm library

AC_PACKAGE_REQUIRE(aterm, baffle,
   [  --with-aterm=DIR        ATerm-library is in DIR])
AC_SUBST(ATERM)

dnl }}}
dnl {{{  Require ToolBus

dnl Require ToolBus library
AC_PACKAGE_REQUIRE(toolbuslib, toolbuslib-config,
   [  --with-toolbuslib=DIR      ToolBus library is in DIR])
AC_SUBST(TOOLBUSLIB)


dnl Optional package ToolBus
AC_PACKAGE_OPTIONAL(toolbus, tifstoc,
   [  --with-toolbus=DIR      ToolBus is in DIR],
   [  AC_MSG_WARN([ToolBus package not found. It is required when building from CVS.])])
AC_SUBST(TOOLBUS)

dnl }}}
dnl {{{  Require pt-support package

AC_PACKAGE_REQUIRE(pt-support, unparsePT,
   [  --with-pt-support=DIR   pt-support is in DIR])
AC_SUBST(PT_SUPPORT)

dnl }}}
dnl {{{  Require sdf-support package

AC_PACKAGE_REQUIRE(sdf-support, sdf-support-config,
   [  --with-sdf-support=DIR  sdf-support is in DIR])
AC_SUBST(SDF_SUPPORT)

dnl }}}
dnl {{{  Require asf-support package

AC_PACKAGE_REQUIRE(asf-support, asf-support-config,
   [  --with-asf-support=DIR  asf-support is in DIR])
AC_SUBST(ASF_SUPPORT)

dnl }}}
dnl {{{  Require asf-library package

AC_PACKAGE_REQUIRE(asf-library, asf-library-config,
   [  --with-asf-library=DIR  asf-library is in DIR])
AC_SUBST(ASF_LIBRARY)

dnl }}}
dnl {{{  Require asc-support package

AC_PACKAGE_REQUIRE(asc-support, asc-support-config,
   [  --with-asc-support=DIR  asc-support is in DIR])
AC_SUBST(ASC_SUPPORT)

ASCINC=${ASC_SUPPORT}/include
AC_SUBST(ASCINC)
ASCLIB=${ASC_SUPPORT}/lib
AC_SUBST(ASCLIB)

dnl }}}
dnl {{{  Where is perl5?

AC_PATH_PROGS(PERL,perl5 perl, /usr/bin/perl)

dnl }}}
dnl {{{  Is ranlib needed on this system?
AC_PROG_RANLIB
AC_PATH_PROG(AR,ar,/usr/bin/ar)

dnl }}}
dnl {{{  Determine which libraries are needed for socket() and gethostname()

NOSOCKLIBS=$LIBS
SOCKET_FOUND=no
SOCKLIBS=
AC_CHECK_LIB(sun,socket,[SOCKET_FOUND=yes;SOCKLIBS="-lsun"])
if test ${SOCKET_FOUND} = no; then
  AC_CHECK_LIB(socket, socket,[SOCKET_FOUND=yes;SOCKLIBS="-lsocket"])
fi

dnl then gethostname
GHN_FOUND=no
AC_CHECK_LIB(sun,gethostname,[GHN_FOUND=yes])
if test ${GHN_FOUND} = no; then
  AC_CHECK_LIB(nsl,gethostname,[GHN_FOUND=yes;SOCKLIBS="$SOCKLIBS -lnsl"])
fi

AC_SUBST(SOCKLIBS)

LIBS=$NOSOCKLIBS

dnl }}}
dnl {{{  Check for getopt

AC_CHECK_HEADER(getopt.h)

dnl }}}

dnl {{{  List output files

AC_OUTPUT(
   Makefile
   filtereqssyntax/Makefile
   addeqssyntax/Makefile
   addeqssyntax/spec/Makefile
   addeqssyntax/src/Makefile
   addapisyntax/Makefile
   addapisyntax/spec/Makefile
   addapisyntax/src/Makefile
   removevarsyntax/Makefile
   removevarsyntax/spec/Makefile
   removevarsyntax/src/Makefile
   asfc/Makefile
   asfc/src/Makefile
   asfc/src/muasf/Makefile
   asfe/Makefile
   asfe/src/Makefile
   asfe/src/api/Makefile
   asf-checker/Makefile
   asf-checker/src/Makefile
   asfsdf-checker/Makefile
   asfsdf-checker/spec/Makefile
   asfsdf-checker/src/Makefile
   utils/Makefile
   test/Makefile
   test/eqs/Makefile
   test/input/Makefile
   test/output/Makefile
   test/c-code/Makefile
)

dnl }}}
