dnl Process this file with autoconf to produce a configure script.
AC_INIT
AC_CONFIG_SRCDIR([configure.in])
GLT_INIT_PACKAGE
AC_PREREQ(2.59)

AC_PROG_MAKE_SET([])

AC_AIX
AC_PROG_CC
AC_PROG_LIBTOOL

dnl {{{  Handle --with-cflags option

AC_ARG_WITH(cflags,
   [  --with-cflags=CFLAGS    standard options of c compiler],
   CFLAGS=${withval},
   if test "a${GCC}" = "ayes"; then
     CFLAGS="-Wall -g -O2"
   fi;
)
AC_SUBST(CFLAGS)

dnl }}}
dnl {{{  Handle --with-tide


AC_PACKAGE_REQUIRE(tide-support, tide-support-config,
   [  --with-tide-support=DIR         Tide-support is in DIR])
AC_SUBST(TIDE_SUPPORT)

dnl }}}
dnl {{{  Require ATerm library

AC_PACKAGE_REQUIRE(aterm, baffle,
   [  --with-aterm=DIR        ATerm-library is in DIR])
AC_SUBST(ATERM)

dnl }}}
dnl {{{  Require error-support library

AC_PACKAGE_REQUIRE(error-support, error-support-config,
   [  --with-error-support=DIR        Error-support is in DIR])
AC_SUBST(ERROR_SUPPORT)

dnl }}}
dnl {{{  Require ToolBus

dnl Require ToolBus library
AC_PACKAGE_REQUIRE(toolbuslib, toolbuslib-config,
   [  --with-toolbuslib=DIR   ToolBus library is in DIR])
AC_SUBST(TOOLBUSLIB)


dnl Require package ToolBus
AC_PACKAGE_REQUIRE(toolbus, toolbus,
   [  --with-toolbus=DIR      ToolBus is in DIR])
AC_SUBST(TOOLBUS)

dnl }}}
dnl {{{  Require pt-support package

AC_PACKAGE_REQUIRE(pt-support, unparsePT,
   [  --with-pt-support=DIR   pt-support is in DIR])
AC_SUBST(PT_SUPPORT)

dnl }}}
dnl {{{  Require sdf-support package

AC_PACKAGE_REQUIRE(sdf-support, sdf-support-config,
   [  --with-sdf-support=DIR  sdf-support is in DIR])
AC_SUBST(SDF_SUPPORT)

dnl }}}
dnl {{{  Require asf-support package

AC_PACKAGE_REQUIRE(asf-support, asf-support-config,
   [  --with-asf-support=DIR  asf-support is in DIR])
AC_SUBST(ASF_SUPPORT)

dnl }}}
dnl {{{  Require asc-support package

AC_PACKAGE_REQUIRE(asc-support, asc-support-config,
   [  --with-asc-support=DIR  asc-support is in DIR])
AC_SUBST(ASC_SUPPORT)

ASC_LD_FLAGS=`${ASC_SUPPORT}/bin/asc-support-config --ldflags`
AC_SUBST(ASC_LD_FLAGS)
ASC_INCLUDES=`${ASC_SUPPORT}/bin/asc-support-config --includes`
AC_SUBST(ASC_INCLUDES)

dnl }}}

dnl {{{  Determine which libraries are needed for socket() and gethostname()

NOSOCKLIBS=$LIBS
SOCKET_FOUND=no
SOCKLIBS=
AC_CHECK_LIB(sun,socket,[SOCKET_FOUND=yes;SOCKLIBS="-lsun"])
if test ${SOCKET_FOUND} = no; then
  AC_CHECK_LIB(socket, socket,[SOCKET_FOUND=yes;SOCKLIBS="-lsocket"])
fi

dnl then gethostname
GHN_FOUND=no
AC_CHECK_LIB(sun,gethostname,[GHN_FOUND=yes])
if test ${GHN_FOUND} = no; then
  AC_CHECK_LIB(nsl,gethostname,[GHN_FOUND=yes;SOCKLIBS="$SOCKLIBS -lnsl"])
fi

AC_SUBST(SOCKLIBS)

LIBS=$NOSOCKLIBS

dnl }}}
dnl {{{  Check for getopt

AC_CHECK_HEADER(getopt.h)

dnl }}}

dnl {{{  List output files

AC_CONFIG_FILES([Makefile
   syntax/Makefile
   syntax/addeqssyntax/Makefile
   syntax/addeqssyntax/src/Makefile
   syntax/removevarsyntax/Makefile
   syntax/removevarsyntax/src/Makefile
   syntax/asfsdf-checker/Makefile
   syntax/asfsdf-checker/src/Makefile
   syntax/asfsdf-checker/spec/Makefile
   semantics/Makefile
   semantics/asfc/Makefile
   semantics/asfc/src/Makefile
   semantics/asfc/src/muasf/Makefile
   semantics/asfe/Makefile
   semantics/asfe/src/Makefile
   semantics/asf-checker/Makefile
   semantics/asf-checker/src/Makefile
   semantics/asf-operations/Makefile
   semantics/asf-operations/src/Makefile
   semantics/asf-api/Makefile
   semantics/asf-api/spec/Makefile
   semantics/asf-api/src/Makefile
   semantics/utils/Makefile
   semantics/test/Makefile
   semantics/test/eqs/Makefile
   semantics/test/input/Makefile
   semantics/test/output/Makefile
   semantics/test/c-code/Makefile
])
AC_OUTPUT

dnl }}}
