dnl $Id$

dnl Process this file with autoconf to produce a configure script.
AC_INIT(configure.in)
AM_INIT_AUTOMAKE(asfsdf-meta,1.5)

ACLOCAL="${ACLOCAL} -I ."

dnl What commands are needed to set the variable MAKE in Makefiles?
AC_SET_MAKE

AC_PACKAGE_REQUIRE(meta, generic-meta,
   [  --with-meta=DIR          Meta-Environment is in DIR])
AC_SUBST(META)

AC_PACKAGE_REQUIRE(asf, asfc,
   [  --with-asf=DIR           Asf is in DIR])
AC_SUBST(ASF)

AC_PACKAGE_REQUIRE(pgen, sdf2table,
   [  --with-pgen=DIR         pgen is in DIR])
AC_SUBST(PGEN)

AC_PACKAGE_REQUIRE(asf-library, asf-library-config,
   [  --with-asf=DIR           Asf+Sdf library is in DIR])
AC_SUBST(ASF_LIBRARY)

dnl Which files need updating?
AC_OUTPUT(
  Makefile
  meta-scripts/Makefile
  src/Makefile
  test/Makefile
  demo/Makefile
  demo/old-pico/Makefile
  demo/pico/Makefile
  demo/user-manual-examples/Makefile
)
